create main menu HUD

--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,6 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-5PTATBL
 LastExecutedLaunchName=DESKTOP-5PTATBL
 LastExecutedPIEPreviewDevice=
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -92,7 +91,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/HUDS
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -641,6 +640,224 @@ Key_C.TransformCommon=True
 2DSideScrollerExampleMap_C.Actor=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+MainMenu_C.Tick=True
+MainMenu_C.HUD=True
+MainMenuHUD_C.Tick=True
+MainMenuHUD_C.HUD=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Clipping=True
+Image.Performance=True
+Image.Render Transform=True
+Image.Navigation=True
+Image.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Clipping=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Clipping=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+MainMenuWidget_C.Appearance=True
+MainMenuWidget_C.Interaction=True
+MainMenuWidget_C.Input=True
+MainMenuWidget_C.Behavior=True
+MainMenuWidget_C.Clipping=True
+MainMenuWidget_C.Performance=True
+MainMenuWidget_C.Render Transform=True
+MainMenuWidget_C.Navigation=True
+Widget.Behavior=True
+Widget.Clipping=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Clipping=True
+VerticalBox.Performance=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Screenshots=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.Navigation=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+NiagaraSettings.Niagara=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.APKPackaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.AdvancedAPKPackaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+LevelSequenceEditorSettings.Tracks=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Key.Key;
@@ -669,7 +886,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
@@ -681,6 +898,13 @@ ShapeComponent=
 PaperCharacter="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
 Character="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
 Pawn="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
+Image="\"Object.Appearance.Brush\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -701,11 +925,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/Games/Desktop/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
-GenericImport=../../../../../../Users/Games/Documents/GitHub/level-6-l6-group-9/Artwork/Current Idea/PNG/Tileset/Tileset_Sheet_Ver2.0.png
+GenericImport=E:/studies/UOS games uni/Level 6 Year 3/Group Project/New Game Idea/Artwork/Menus & Fonts/PNG/Back Button colour .png
 GenericExport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericOpen=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericSave=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -1257,6 +1481,10 @@ SequencerWidgets.TimeStamp=2017.11.02-15.57.42
 SequencerWidgets.LastCompileMethod=External
 SynthBenchmark.TimeStamp=2017.10.04-13.42.38
 SynthBenchmark.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2017.09.26-13.10.18
+LauncherServices.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.09.26-13.10.16
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed.Ninja_Rabbit_colour_sprite_sheet__Fixed=1
@@ -1289,6 +1517,11 @@ SynthBenchmark.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Blueprints/Door.Door=1
 /Game/2DSideScrollerBP/Sprites/objects/Level_Key.Level_Key=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
+/Game/2DSideScrollerBP/Blueprints/MainMenu.MainMenu=1
+/Game/2DSideScrollerBP/Blueprints/MainMenuHUD.MainMenuHUD=1
+/Game/2DSideScrollerBP/Blueprints/MainMenuWidget.MainMenuWidget=1
+/Game/2DSideScrollerBP/Blueprints/HUDS/MainMenuHUD.MainMenuHUD=1
+/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -1339,8 +1572,26 @@ InstalledPlugins=ModoMaterialImporter
 BoxComponent=BoxComponent.Collision.Collision,
 StructProperty=StructProperty.DefaultValueCategory.None,
 2DSideScrollerCharacter_C=StructProperty.DefaultValueCategory.None,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [MessageLog]
 LastLogListing=PIE
+
+[ColorPickerUI]
+bWheelMode=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=True
+Optimization=False
+Panel=True
+Primitive=False
+Special Effects=False
+Uncategorized=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
