--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/Editor.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/Editor.ini
@@ -119,7 +119,7 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 							"SizeCoefficient": 0.85000002384185791,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "Sequencer",\
+							"ForegroundTab": "CompilerResults",\
 							"Tabs": [\
 								(\
 									"TabId": "Sequencer",\
@@ -128,6 +128,118 @@ WidgetBlueprintEditor_Designer_Layout_v4_1=(\
 								(\
 									"TabId": "CompilerResults",\
 									"TabState": "OpenedTab"\
+								)\
+							]\
+						)\
+					]\
+				)\
+			]\
+		)\
+	]\
+)
+WidgetBlueprintEditor_Graph_Layout_v1=(\
+	"Type": "Layout",\
+	"Name": "WidgetBlueprintEditor_Graph_Layout_v1",\
+	"PrimaryAreaIndex": 0,\
+	"Areas": [\
+		(\
+			"SizeCoefficient": 1,\
+			"Type": "Area",\
+			"Orientation": "Orient_Vertical",\
+			"WindowPlacement": "Placement_NoWindow",\
+			"Nodes": [\
+				(\
+					"SizeCoefficient": 0.23211973905563354,\
+					"Type": "Stack",\
+					"HideTabWell": false,\
+					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
+					"Tabs": [\
+						(\
+							"TabId": "AssetEditorToolkit_Toolbar",\
+							"TabState": "OpenedTab"\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 1.2431367635726929,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.15000000596046448,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "MyBlueprint",\
+							"Tabs": [\
+								(\
+									"TabId": "MyBlueprint",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.69999998807907104,\
+							"Type": "Splitter",\
+							"Orientation": "Orient_Vertical",\
+							"Nodes": [\
+								(\
+									"SizeCoefficient": 0.80000001192092896,\
+									"Type": "Splitter",\
+									"Orientation": "Orient_Horizontal",\
+									"Nodes": [\
+										(\
+											"SizeCoefficient": 1.1964133977890015,\
+											"Type": "Stack",\
+											"HideTabWell": false,\
+											"ForegroundTab": "Document : 1",\
+											"Tabs": [\
+												(\
+													"TabId": "Document",\
+													"TabState": "ClosedTab"\
+												)\
+											]\
+										),\
+										(\
+											"SizeCoefficient": 0.40358498692512512,\
+											"Type": "Stack",\
+											"HideTabWell": false,\
+											"ForegroundTab": "Inspector",\
+											"Tabs": [\
+												(\
+													"TabId": "Inspector",\
+													"TabState": "OpenedTab"\
+												)\
+											]\
+										)\
+									]\
+								),\
+								(\
+									"SizeCoefficient": 0.20000000298023224,\
+									"Type": "Stack",\
+									"HideTabWell": false,\
+									"ForegroundTab": "CompilerResults",\
+									"Tabs": [\
+										(\
+											"TabId": "CompilerResults",\
+											"TabState": "OpenedTab"\
+										),\
+										(\
+											"TabId": "FindResults",\
+											"TabState": "ClosedTab"\
+										)\
+									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.15000000596046448,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "None",\
+							"Tabs": [\
+								(\
+									"TabId": "PaletteList",\
+									"TabState": "ClosedTab"\
 								)\
 							]\
 						)\
