--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -103,6 +103,10 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/ControlsScreen.ControlsScreen
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -893,7 +897,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Object=
 PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
@@ -901,13 +905,13 @@ SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 BoxComponent=
 ShapeComponent=
-2DSideScrollerCharacter_C="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
-PaperCharacter="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
-Character="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
-Pawn="\"Object.Respawn_Location\" \"Object.Respawn_Location\" "
+2DSideScrollerCharacter_C=
+PaperCharacter=
+Character=
+Pawn=
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Widget=
+Visual=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
@@ -1492,6 +1496,8 @@ LauncherServices.TimeStamp=2017.09.26-13.10.18
 LauncherServices.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.09.26-13.10.16
 ExternalImagePicker.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2017.09.26-13.10.20
+NewLevelDialog.LastCompileMethod=Unknown
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed.Ninja_Rabbit_colour_sprite_sheet__Fixed=1
@@ -1596,6 +1602,7 @@ Panel=True
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
