--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-5PTATBL
 LastExecutedLaunchName=DESKTOP-5PTATBL
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -102,11 +103,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/ControlsScreen.ControlsScreen
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Collection.Collection
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -871,12 +870,13 @@ MainMenuWidget_C.Designer=True
 MainMenuWidget_C.Layout=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Key.Key;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/mountain-background_Sprite.mountain-background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Door.Door;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Bird_Enemy.Bird_Enemy;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Hazard.Hazard;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Collection.Collection;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Hazard.Hazard;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Checkpoint.Checkpoint;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Key.Key;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Bird_Enemy.Bird_Enemy;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_Seven_LS.Bird_Enemy_Seven_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_Four_LS.Spider_Enemy_Four_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Spider_Enemy.Spider_Enemy;
@@ -890,7 +890,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Three_L
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_two_LS.Spider_Enemy_two_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_one_LS.Spider_Enemy_one_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_two_LS.Bird_Enemy_two_LS;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_one_LS.Bird_Enemy_one_LS;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -898,11 +897,11 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
 Object=
-PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PaperSpriteComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BoxComponent=
 ShapeComponent=
 2DSideScrollerCharacter_C=
@@ -1580,7 +1579,7 @@ LevelSequenceActor.General=True
 BoxComponent.Collision=True
 
 [PluginBrowser]
-InstalledPlugins=ModoMaterialImporter
+InstalledPlugins=Substance
 
 [DetailCustomWidgetExpansion]
 BoxComponent=BoxComponent.Collision.Collision,
