Imported all created assets for game

--- a/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,7 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Map/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Collection.Collection
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -870,6 +869,7 @@ MainMenuWidget_C.Designer=True
 MainMenuWidget_C.Layout=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/New_Tile_Set/New_Tile-Set_Sprite_0.New_Tile-Set_Sprite_0;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/mountain-background_Sprite.mountain-background_Sprite;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Door.Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Collection.Collection;
@@ -889,14 +889,13 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_thr
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Three_LS.Spider_Three_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_two_LS.Spider_Enemy_two_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_one_LS.Spider_Enemy_one_LS;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_two_LS.Bird_Enemy_two_LS;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
-Object=
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[52]\" "
+Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[52]\" "
 PaperSpriteComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -1588,7 +1587,7 @@ StructProperty=StructProperty.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [ColorPickerUI]
 bWheelMode=False
