--- a/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/HUDAssets/New_Text
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -102,9 +102,10 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/ControlsScreen.ControlsScreen
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/Instrcutions_Screen.Instrcutions_Screen
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -975,11 +976,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Games/Desktop/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/Games/Desktop/level-6-l6-group-9/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
-GenericImport=E:/studies/UOS games uni/Level 6 Year 3/Group Project/New Game Idea/Artwork/Menus & Fonts/PNG/Back Button colour .png
+GenericImport=F:/studies/UOS games uni/Level 6 Year 3/Group Project/Resubmission Work/Buttons & Fonts/Life Menu Text.png
 GenericExport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericOpen=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericSave=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
