--- a/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Thomas Simmons Resubmission/Game Build/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,6 +106,7 @@ CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/ControlsScreen.ControlsScreen
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/Instrcutions_Screen.Instrcutions_Screen
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Widgets/In_Game_Screen.In_Game_Screen
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -907,6 +908,16 @@ Instrcutions_Screen_C.Clipping=True
 Instrcutions_Screen_C.Performance=True
 Instrcutions_Screen_C.Render Transform=True
 Instrcutions_Screen_C.Navigation=True
+In_Game_Screen_C.Appearance=True
+In_Game_Screen_C.Interaction=True
+In_Game_Screen_C.Input=True
+In_Game_Screen_C.Designer=True
+In_Game_Screen_C.Layout=True
+In_Game_Screen_C.Behavior=True
+In_Game_Screen_C.Clipping=True
+In_Game_Screen_C.Performance=True
+In_Game_Screen_C.Render Transform=True
+In_Game_Screen_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/New_Tile_Set/New_Tile-Set_Sprite_0.New_Tile-Set_Sprite_0;
@@ -935,7 +946,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[54]\" "
-Object="\"Object.Appearance.Brush\" "
+Object=
 PaperSpriteComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -948,8 +959,8 @@ PaperCharacter=
 Character=
 Pawn=
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" "
@@ -1649,5 +1660,20 @@ User Created=False
 PreviewWidth=1280
 PreviewHeight=720
 PreviewAspectRatio=16:9
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
