--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -105,8 +105,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/Tutorial_Level
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1099,8 +1098,63 @@ Tutorial_Checkpoint1_C.Replication=True
 Tutorial_Checkpoint1_C.Input=True
 Tutorial_Checkpoint1_C.Actor=True
 Tutorial_Checkpoint1_C.TransformCommon=True
+Tut_Text_1_C.Tick=True
+Tut_Text_1_C.Rendering=True
+Tut_Text_1_C.Replication=True
+Tut_Text_1_C.Input=True
+Tut_Text_1_C.Actor=True
+Tut_Text_1_C.TransformCommon=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Rendering=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Tut_Text_2_C.Tick=True
+Tut_Text_2_C.Rendering=True
+Tut_Text_2_C.Replication=True
+Tut_Text_2_C.Input=True
+Tut_Text_2_C.Actor=True
+Tut_Text_2_C.TransformCommon=True
+Tut_Text_3_C.Tick=True
+Tut_Text_3_C.Rendering=True
+Tut_Text_3_C.Replication=True
+Tut_Text_3_C.Input=True
+Tut_Text_3_C.Actor=True
+Tut_Text_3_C.TransformCommon=True
+Tut_Text_4_C.Tick=True
+Tut_Text_4_C.Rendering=True
+Tut_Text_4_C.Replication=True
+Tut_Text_4_C.Input=True
+Tut_Text_4_C.Actor=True
+Tut_Text_4_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_4.Tut_Text_4;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_3.Tut_Text_3;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_2.Tut_Text_2;
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tut_Text_1.Tut_Text_1;
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Tutorial_Level/Tutorial_Text_Sprite_0.Tutorial_Text_Sprite_0;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint1.Tutorial_Checkpoint1;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sprites/Tileset_ver_04_Sprite_56.Tileset_ver_04_Sprite_56;
@@ -1114,25 +1168,18 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Spider.Tutorial_Spider;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Bird_Enemy.Bird_Enemy;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy_Blueprints/Spider_Enemy.Spider_Enemy;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Platform_2.Tutorial_Platform_2;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers_Tutorial_Level/Tutorial_Platform.Tutorial_Platform;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_Platform.Tutorial_Platform;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Platform_Small.Platform_Small;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[19]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[26].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[28].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[32].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[54].CollisionData.Shapes.Shapes[0].Vertices.Vertices[17]\" \"Object.Sprite.PerTileData.PerTileData[56]\" \"Object.Sprite.PerTileData.PerTileData[56].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[58].CollisionData.Shapes.Shapes[1]\" \"Object.Sprite.PerTileData.PerTileData[60]\" \"Object.Sprite.PerTileData.PerTileData[60].CollisionData.Shapes.Shapes[0]\" "
-Object=
-PaperSpriteComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperSpriteComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BoxComponent=
 ShapeComponent=
 2DSideScrollerCharacter_C=
@@ -1152,9 +1199,9 @@ PaperTileMap=
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[18]\" "
 
 [RootWindow]
-ScreenPosition=X=-8.000 Y=0.000
+ScreenPosition=X=123.000 Y=47.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1174,7 +1221,7 @@ UNR=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Prototyp
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
-GenericImport=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Artwork/Current Idea/PNG/Tileset/Tileset_ver_05.png
+GenericImport=../../../../../../Users/Quwaine/Documents/GitHub/level-6-l6-group-9/Artwork/Current Idea/PNG/Menus & Fonts/Colour/Tutorial_Text4.png
 GenericExport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericOpen=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericSave=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -1724,8 +1771,8 @@ BlueprintGraph.TimeStamp=2017.11.02-15.57.28
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.11.02-15.57.42
 SequencerWidgets.LastCompileMethod=External
-SynthBenchmark.TimeStamp=2017.10.04-13.42.38
-SynthBenchmark.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2017.11.02-15.57.43
+SynthBenchmark.LastCompileMethod=External
 LauncherServices.TimeStamp=2017.09.26-13.10.18
 LauncherServices.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.11.02-15.57.32
@@ -1787,6 +1834,9 @@ NewLevelDialog.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Sprites/Tutorial_Level/Cat_Ninja_Idle.Cat_Ninja_Idle=1
 /Game/2DSideScrollerBP/Sprites/Tutorial_Level/Cat_Ninja_Idle1.Cat_Ninja_Idle1=1
 /Game/2DSideScrollerBP/Sprites/Tutorial_Level/PandaMouse_Ninja_Idle1.PandaMouse_Ninja_Idle1=1
+/Game/2DSideScrollerBP/Blueprints/Tut_Text_1.Tut_Text_1=1
+/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint1.Tutorial_Checkpoint1=1
+/Game/2DSideScrollerBP/Blueprints/Tutorial_Checkpoint.Tutorial_Checkpoint=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -1840,7 +1890,7 @@ StructProperty=StructProperty.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 BoolProperty=StructProperty.DefaultValueCategory.None,
 K2Node_VariableSet=StructProperty.DefaultValueCategory.None,
-K2Node_VariableGet=StructProperty.DefaultValueCategory.None,
+K2Node_VariableGet=
 
 [MessageLog]
 LastLogListing=PIE
