new features / changes (see notes)
- Main menu moved to tutorial screen
- score hud added
- fixed bug with spawning on 2nd level (was correct, but no spawn points, as such did not have location data to spawn from)

--- a/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Config/DefaultEngine.ini
+++ b/Quwaine Dantes Resubmission/Prototypes/New Idea/Ninja_Bunnies/Config/DefaultEngine.ini
@@ -1,16 +1,6 @@
 [URL]
 GameName=Ninja_Bunnies
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/Tutorial_Level.Tutorial_Level
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/Tutorial_Level.Tutorial_Level
-GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
 
@@ -136,3 +126,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/2DSideScrollerBP/Maps/Tutorial_Level.Tutorial_Level
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/2DSideScrollerBP/Maps/Tutorial_Level.Tutorial_Level
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScroller.2DSideScroller_C
+GlobalDefaultServerGameMode=None
+
+
